...
            app:layout_constraintEnd_toStartOf="@+id/title_text"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/helvatica"
            android:paddingStart="5dp"
...
            android:alpha="0.6"
            android:padding="10dp"
            android:src="@drawable/w03d"
            android:contentDescription="@string/main_weeather_pic" />

        <TextView
            android:id="@+id/id_degree"
            android:layout_width="210dp"
            android:layout_height="152dp"
            android:layout_alignStart="@+id/id_weatherImage"
            android:layout_alignTop="@+id/id_weatherImage"
            android:layout_alignEnd="@+id/id_weatherImage"
            android:layout_alignBottom="@+id/id_weatherImage"
...
            android:text="@string/_27"
            android:textColor="@color/city"
            android:textSize="120sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_degree"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvatica"
...
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/id_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/_94"
...
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/_3_km_h"
                    android:textColor="@color/white"
...
                    android:text="@string/feels_like"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id_realfeel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/_19"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_forecastDay1"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/opensans"
                    android:paddingStart="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/fri_jun_26"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/id_forecastIcon1"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/w04d"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:id="@+id/id_forecastTemp1"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensans"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
...
