...
                android:layout_height="wrap_content"
                android:text="Email Address"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress" />

            <View
...
                android:layout_height="wrap_content"
                android:text="Password"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/passowrd_icon"
                android:inputType="textPassword" />

            <RelativeLayout
...
            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                app:cornerRadius="32dp" />

            <View
...
