...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_layer_2">

            <TextView
                android:id="@+id/weight_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/weight_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/text_color"
...
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/bg_layer_3"
                    app:maxImageSize="35dp"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_layer_2">

            <TextView
                android:id="@+id/age_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/age_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/text_color"
...
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/age_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/bg_layer_3"
                    app:maxImageSize="35dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_design"
        android:text="@string/button_text"
        android:textColor="@color/text_color"
...
