...
    <string name="start">Start</string>
    <string name="stop">Stop</string>


    <string name="bmi_app_name">BMI Calculator</string>
    <string name="title_text">BMI Calculator</string>
    <string name="weight_counter_txt">50</string>
    <string name="age_counter_txt">25</string>
    <string name="weight_title_txt">Weight (kg)</string>
    <string name="age_title_txt">Age</string>
    <string name="height_title_txt">5 feet 4 inches </string>
    <string name="button_text">Calculate</string>
    <string name="button2_text">Calculate Again</string>
    <string name="ft">ft</string>
...
